# ecommerce-analitycs

./: .env.example  .gitignore  AIRFLOW_README.md  Dockerfile  Dockerfile.airflow  GUIA_GIT.md  Makefile  README.md  analizar_con_duckdb.py  conftest.py  docker-compose.yml  extraer_ordenes.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
airflow/dags/: dag_ordenes.py
ordenes_analytics/: dbt_project.yml  dev.duckdb  ordenes.duckdb  profiles.yml
ordenes_analytics/macros/: date_dimensions.sql
ordenes_analytics/models/bronze/: _bronze__models.yml  brz_items.sql  brz_ordenes.sql
ordenes_analytics/models/gold/: _gold__models.yml  gld_agg_ventas_diarias.sql  gld_agg_ventas_mensuales.sql  gld_dim_cliente.sql  gld_dim_producto.sql  gld_dim_ubicacion.sql  gld_fact_ventas.sql
ordenes_analytics/models/marts/: mart_resumen_ventas.sql
ordenes_analytics/models/silver/: _silver__models.yml  slv_dim_fecha.sql  slv_items.sql  slv_ordenes.sql
ordenes_analytics/models/staging/: stg_ordenes.sql
test/: test_extraer.py
tests/: test_extraer.py
