[project]
name = "proyecto-ordenes"
version = "0.1.0"
description = "Extractor de ordenes desde API"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "dbt-duckdb>=1.7.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
